--- a/assets/style.css
+++ b/assets/style.css
@@ -130,7 +130,8 @@ html {
   font-size: 62.5%; }
 body {
   background-color: #FAEBD7;  // AntiqueWhite
-  margin: 0;
+  // margin: 0;
+  margin: auto;
   padding: 0;
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
@@ -157,7 +158,7 @@ p {
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 14px;
-  padding-left: 12px;
+  padding-left: 0px;  // 12px
 }
 
 /* Blockquotes
@@ -392,6 +393,58 @@ li {
 
 /* Tables
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* thead th {
+    background-color: SaddleBrown;
+    // background-color: #006DCC;
+    // color: white;
+}
+
+tbody td {
+    background-color: #EEEEEE;
+} */
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: visible auto;
+}
+.table-wrapper {
+  overflow: visible auto;
+  position: relative;
+  height: 53vh;
+}
+.table-wrapper > table > thead {
+  position: sticky;
+  top: 0;
+}
+.table-wrapper > table > th {
+  position: sticky;
+  top: 0;
+}
+.table-wrapper > table > thead {
+  border-top: 1px solid Black;
+  border-right: 1px solid Black;
+  border-left: 1px solid Black;
+  border-bottom: 1px solid Black;
+}
+.table-wrapper > table > tbody {
+  background-color: #e0b589;  // Buttercream 87%
+  // border: 4px solid Black;
+}
+.table-wrapper > table > tbody > tr {
+  border: 1px solid #70380f;
+}
+.table-wrapper > table > tbody > tr > td {
+  border-right: 1px solid #70380f;
+  border-left: 1px solid #70380f;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 53vh;
+  border: 3px solid Green;
+}
 /* table {
   border-collapse: collapse;
 }
